--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Jste Command Builder</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Jste Command Studio</title>
 <script src="JS/jquery-3.2.1.min.js"></script>
 <script src="JS/jquery-migrate-3.0.0.min.js"></script>
 <script src="JS/blockly_compressed.js"></script>
