--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     </a>
     <ul>
       <li>
-        <a id="openWordsDBEditorBtn" class="btn-floating blue">
+        <a id="openWordsDBEditorBtn" class="btn-floating blue pulse">
           <i class="material-icons">translate</i>
         </a>
         </li>
@@ -451,7 +451,7 @@
       <field name="TEXT"></field>
     </block>
     <block type="command">
-      <field name="command_id">c0</field>
+      <field name="command_id">S6</field>
       <field name="Language">en</field>
     </block>
     <block type="alternatives">
